abstracted some html code to make files more readable, especially dz_stats.html

--- a/templates/dz_stats.html
+++ b/templates/dz_stats.html
@@ -1,240 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>DZstats</title>
-    <link rel="shortcut icon" href="{{ url_for('static', filename='/DZ.ico') }}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/default.css') }}">
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-</head>
-<body>
-    <nav id="nbar" class="navbar navbar-expand-lg navbar-light" style="width:115%;">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <img src="{{ url_for('static', filename='/menu.ico') }}" alt="Menu" class="navbar-toggler-icon">
-        </button>
-
-        <a id="dztools-link" href="{{ url_for('main') }}" class="nav-link mt-1 navbar-icon">
-            <img src="{{ url_for('static', filename='/DZ.ico') }}" alt="DZ.ico">
-            DZtools
-        </a>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a id="dztools-link" href="{{ url_for('main') }}" class="nav-link usually-hidden">DZtools</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/pdp/">PDP Plotter</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/kde/">KDE Plotter</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/dz_stats/">DZstats</a>
-                </li>
-            </ul>
+    <head>
+        <title>DZstats</title>
+        {% include 'include/header.html' %}
+    </head>
+    <body>
+        {% include 'include/nav.html' %}
+        <div class="container mt-5">
+            <h1 class="text-left mb-4">DZstats</h1>
+            {% include 'include/controls.html' %}
+            {% include 'include/results.html' %}
         </div>
-    </nav>
-    <div class="container mt-5">
-        <h1 class="text-left mb-4">DZstats</h1>
-        <div class="col-md9">
-            <form method="post" action="/dz_stats/" enctype="multipart/form-data" id="fileForm" class="mb-4">
-                <div class="mb-3">
-                    <div class="row">
-                        <label for="file" class="form-label">Choose an Excel file (.xlsx or .xls)</label>
-                        <div class="col-md-8">
-                            <input type="file" name="file" class="form-control" id="file" accept=".xlsx, .xls" required>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4 mt-2">
-                            <label>Bandwidth: </label>
-                            <label><input type="text" name="kde_bandwidth" value="{{ kde_bandwidth }}"></label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <label>Select Graphs:</label>
-                        <div class="row">
-                            <div class="col-md-2">
-                                <label><input type="checkbox" name="kde_graph" value="true" {% if kde_graph %}checked{% endif %}> KDE Graph</label>
-                            </div>
-                            <div class="col-md-1">
-                                <div class="form-check form-switch">
-                                    <label class="form-check-label">
-                                        <input class="form-check-input" type="checkbox" name="kde_stacked" value="true" {% if kde_stacked %}checked{% endif %}>
-                                        Stacked
-                                    </label>
-                                </div>
-                            </div>
-                        </div>
-                        <label><input type="checkbox" name="cdf_graph" value="true" {% if cdf_graph %}checked{% endif %}> CDF Graph</label>
-                        <label>Select Matrices:</label>
-                        <label><input type="checkbox" name="similarity_matrix" value="true" {% if similarity_matrix %}checked{% endif %}> Similarity Matrix</label>
-                        <label><input type="checkbox" name="likeness_matrix" value="true" {% if likeness_matrix %}checked{% endif %}> Likeness Matrix</label>
-                        <label><input type="checkbox" name="ks_matrix" value="true" {% if ks_matrix %}checked{% endif %}> KS Matrix</label>
-                        <label><input type="checkbox" name="kuiper_matrix" value="true" {% if kuiper_matrix %}checked{% endif %}> Kuiper Matrix</label>
-                        <label><input type="checkbox" name="cross_correlation_matrix" value="true" {% if cross_correlation_matrix %}checked{% endif %}> Cross-Correlation Matrix</label>
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-primary">Plot</button>
-            </form>
-        </div>
-        <div class="col-md-9">
-            {% if graph_data  and kde_graph %}
-            <div class="text-left">
-                <div>{{ graph_data|safe }}</div>
-                <div class="mt-3">
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                            Download KDE
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/download_kde?format=png">PNG</a></li>
-                            <li><a class="dropdown-item" href="/download_kde?format=svg">SVG</a></li>
-                            <li><a class="dropdown-item" href="/download_kde?format=pdf">PDF</a></li>
-                            <li><a class="dropdown-item" href="/download_kde?format=eps">EPS</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <br />
-            <br />
-            {% endif %}
-
-            {% if cdf_data and cdf_graph %}
-                <div class="text-left">
-                    <div>{{ cdf_data|safe }}</div>
-                        <div class="mt-3">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Download CDF
-                                </button>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/download_cdf?format=png">PNG</a></li>
-                                    <li><a class="dropdown-item" href="/download_cdf?format=svg">SVG</a></li>
-                                    <li><a class="dropdown-item" href="/download_cdf?format=pdf">PDF</a></li>
-                                    <li><a class="dropdown-item" href="/download_cdf?format=eps">EPS</a></li>
-                                </ul>
-                             </div>
-                        </div>
-                    </div>
-                </div>
-                <br />
-                <br />
-            {% endif %}
-            {% if similarity_data is not none and similarity_matrix%}
-                <h3>Similarity Matrix</h3>
-                {{ similarity_data.to_html(classes="table table-bordered table-striped", justify="center").replace('<th>','<th style = "background-color: White;">').replace('<td>','<td style = "background-color: White;">')|safe }}
-                <div class="col-md-3">
-                    <div class="mt-3">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                Download Similarity Matrix
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="{{ url_for('download_excel', format='xlsx', matrix_type="similarity") }}">XLSX</a></li>
-                                <li><a class="dropdown-item" href="{{ url_for('download_excel', format='xls', matrix_type="similarity") }}">XLS</a></li>
-                                <li><a class="dropdown-item" href="{{ url_for('download_excel', format='csv', matrix_type="similarity") }}">CSV</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <br />
-                <br />
-            {% endif %}
-            {% if likeness_data is not none and likeness_matrix%}
-                <h3>Likeness Matrix</h3>
-                {{ likeness_data.to_html(classes="table table-bordered table-striped", justify="center").replace('<th>','<th style = "background-color: White;">').replace('<td>','<td style = "background-color: White;">')|safe }}
-                <div class="col-md-3">
-                    <div class="mt-3">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                Download Likeness Matrix
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="{{ url_for('download_excel', format='xlsx', matrix_type="likeness") }}">XLSX</a></li>
-                                <li><a class="dropdown-item" href="{{ url_for('download_excel', format='xls', matrix_type="likeness") }}">XLS</a></li>
-                                <li><a class="dropdown-item" href="{{ url_for('download_excel', format='csv', matrix_type="likeness") }}">CSV</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <br />
-                <br />
-            {% endif %}
-            {% if ks_data is not none and ks_matrix %}
-                <h3>KS Test Matrix</h3>
-                {{ ks_data.to_html(classes="table table-bordered table-striped", justify="center").replace('<th>','<th style = "background-color: White;">').replace('<td>','<td style = "background-color: White;">')|safe }}
-                <div class="col-md-3">
-                    <div class="mt-3">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                Download KS Test Matrix
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="{{ url_for('download_excel', format='xlsx', matrix_type="ks") }}">XLSX</a></li>
-                                <li><a class="dropdown-item" href="{{ url_for('download_excel', format='xls', matrix_type="ks") }}">XLS</a></li>
-                                <li><a class="dropdown-item" href="{{ url_for('download_excel', format='csv', matrix_type="ks") }}">CSV</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <br />
-                <br />
-            {% endif %}
-            {% if kuiper_data is not none and kuiper_matrix %}
-                <h3>Kuiper Test Matrix</h3>
-                {{ kuiper_data.to_html(classes="table table-bordered table-striped", justify="center").replace('<th>','<th style = "background-color: White;">').replace('<td>','<td style = "background-color: White;">')|safe }}
-                <div class="col-md-3">
-                    <div class="mt-3">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                Download Kuiper Test Matrix
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="{{ url_for('download_excel', format='xlsx', matrix_type="kuiper") }}">XLSX</a></li>
-                                <li><a class="dropdown-item" href="{{ url_for('download_excel', format='xls', matrix_type="kuiper") }}">XLS</a></li>
-                                <li><a class="dropdown-item" href="{{ url_for('download_excel', format='csv', matrix_type="kuiper") }}">CSV</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <br />
-                <br />
-            {% endif %}
-            {% if cross_correlation_data is not none and cross_correlation_matrix %}
-                <h3>Cross-Correlation Matrix</h3>
-                {{ cross_correlation_data.to_html(classes="table table-bordered table-striped", justify="center").replace('<th>','<th style = "background-color: White;">').replace('<td>','<td style = "background-color: White;">')|safe }}
-                <div class="col-md-3">
-                    <div class="mt-3">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                Download Cross Correlation Matrix
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="{{ url_for('download_excel', format='xlsx', matrix_type="cross_correlation") }}">XLSX</a></li>
-                                <li><a class="dropdown-item" href="{{ url_for('download_excel', format='xls', matrix_type="cross_correlation") }}">XLS</a></li>
-                                <li><a class="dropdown-item" href="{{ url_for('download_excel', format='csv', matrix_type="cross_correlation") }}">CSV</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <br />
-                <br />
-            {% endif %}
-        </div>
-    <script>
-      // Adjust the navbar width based on the content width
-      function adjustNavbarWidth() {
-        var contentWidth = document.documentElement.scrollWidth || document.body.scrollWidth;
-        document.getElementById('nbar').style.width = contentWidth + 50 + 'px';
-      }
-
-      // Call the function initially and on window resize
-      window.addEventListener('resize', adjustNavbarWidth);
-      adjustNavbarWidth();
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+        <script src="scripts/navbar.js"></script>
+        <script src="scripts/stacked_switch.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    </body>
 </html>
