--- a/templates/kde.html
+++ b/templates/kde.html
@@ -1,40 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>KDE Plotter</title>
-    <link rel="shortcut icon" href="{{ url_for('static', filename='/DZ.ico') }}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/default.css') }}">
+    {% include 'include/header.html' %}
 </head>
 <body>
-    <nav id="nbar" class="navbar navbar-expand-lg navbar-light" style="width:115%;">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <img src="{{ url_for('static', filename='/menu.ico') }}" alt="Menu" class="navbar-toggler-icon">
-        </button>
-
-        <a id="dztools-link" href="{{ url_for('main') }}" class="nav-link mt-1 navbar-icon">
-            <img src="{{ url_for('static', filename='/DZ.ico') }}" alt="DZ.ico">
-            DZtools
-        </a>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a id="dztools-link" href="{{ url_for('main') }}" class="nav-link usually-hidden">DZtools</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/pdp/">PDP Plotter</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/kde/">KDE Plotter</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/dz_stats/">DZstats</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    {% include 'include/nav.html' %}
     <div class="container mt-5">
         <div class="row">
         <h1 class="text-left mb-4">KDE Plotter</h1>
@@ -83,17 +54,7 @@
 
     <br />
     <br />
-    <script>
-      // Adjust the navbar width based on the content width
-      function adjustNavbarWidth() {
-        var contentWidth = document.documentElement.scrollWidth || document.body.scrollWidth;
-        document.getElementById('nbar').style.width = contentWidth + 50 + 'px';
-      }
-
-      // Call the function initially and on window resize
-      window.addEventListener('resize', adjustNavbarWidth);
-      adjustNavbarWidth();
-    </script>
+    <script src="scripts/navbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
