--- a/templates/dz_stats.html
+++ b/templates/dz_stats.html
@@ -11,8 +11,8 @@
             {% include 'include/controls.html' %}
             {% include 'include/results.html' %}
         </div>
-        <script src="scripts/navbar.js"></script>
-        <script src="scripts/stacked_switch.js"></script>
+        <script src="{{ url_for('static',filename='scripts/navbar.js') }}"></script>
+        <script src="{{ url_for('static',filename='scripts/stacked_switch.js') }}"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
