--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 
     </div>
 
-    <script src="scripts/navbar.js"></script>
+    <script src="../static/scripts/navbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
