--- a/templates/kde.html
+++ b/templates/kde.html
@@ -54,7 +54,7 @@
 
     <br />
     <br />
-    <script src="scripts/navbar.js"></script>
+    <script src="../static/scripts/navbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
