--- a/templates/include/controls.html
+++ b/templates/include/controls.html
@@ -4,9 +4,13 @@
             <div class="row">
                 <label for="file" class="form-label">Choose an Excel file (.xlsx or .xls)</label>
                 <div class="col-md-8">
-                    <input type="file" name="file" class="form-control" id="file" accept=".xlsx, .xls" required>
+                    <input type="file" name="file" class="form-control" id="file" accept=".xlsx, .xls"  {% if not file and 'last_uploaded_file' not in session %} required {% endif %}>
                 </div>
             </div>
+            {% if 'last_uploaded_file' in session %}
+                <br />
+                <h4 style="color:cyan;">File: {{ session["last_uploaded_file"][33:] }}</h4>
+            {% endif %}
             <div class="row">
                 <div class="col-md-4 mt-2">
                     <label>Bandwidth: </label>
@@ -40,3 +44,5 @@
         <button type="submit" class="btn btn-primary">Plot</button>
     </form>
 </div>
+<br />
+<br />
