Moved some files around. Also started on DZnmf. Reevaluated goals in todo.txt

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <title>dz Tools</title>
-    {% include 'include/header.html' %}
+    {% include 'global/header.html' %}
 
 </head>
 <body>
-    {% include 'include/nav.html' %}
+    {% include 'global/nav.html' %}
     <div class="container mt-5">
         <h1 class="text-left mb-4">DZtools</h1>
         <p class="lead">Web-based data visualization and interpretation for detrital zircon geochronology data</p>
