--- a/templates/pdp.html
+++ b/templates/pdp.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <title>PDP Plotter</title>
-    {% include 'include/header.html' %}
+    {% include 'global/header.html' %}
 </head>
 <body>
-    {% include 'include/nav.html' %}
+    {% include 'global/nav.html' %}
     <div class="container mt-5">
         <h1 class="text-left mb-4">PDP Plotter</h1>
         <form method="post" action="/pdp/" enctype="multipart/form-data" id="fileForm" class="mb-4">
