--- a/templates/cmd.html
+++ b/templates/cmd.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <title>Command</title>
-    {% include 'include/header.html' %}
+    {% include 'global/header.html' %}
 </head>
 <body>
-    {% include 'include/nav.html' %}
+    {% include 'global/nav.html' %}
     <div class="container mt-5">
         <h1 class="text-left mb-4">Run a Command</h1>
         <form method="post" action="/cmd/" id="commandForm">
