--- a/templates/dz_nmf.html
+++ b/templates/dz_nmf.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>DZstats</title>
+        <title>DZnmf</title>
         {% include 'global/header.html' %}
     </head>
     <body>
         {% include 'global/nav.html' %}
         <div class="container mt-5">
-            <h1 class="text-left mb-4">DZstats</h1>
-            {% include 'dz_stats/controls.html' %}
-            {% include 'dz_stats/results.html' %}
+            <h1 class="text-left mb-4">DZnmf</h1>
+            {% include 'dz_nmf/controls.html' %}
+            {% include 'dz_nmf/results.html' %}
         </div>
         <script src="{{ url_for('static',filename='scripts/navbar.js') }}"></script>
-        <script src="{{ url_for('static',filename='scripts/stacked_switch.js') }}"></script>
+        <!-- <script src="{{ url_for('static',filename='scripts/stacked_switch.js') }}"></script> /-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
