--- a/templates/global/nav.html
+++ b/templates/global/nav.html
@@ -22,6 +22,9 @@
                     <a class="nav-link" href="/dz_stats/" title="Intersample Comparison of DZ Ages">DZstats</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/dz_nmf/" title="Non-Negative Matrix Factorization">DZnmf</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/cmd/" title="Run a Command">DZcmd</a>
                 </li>
             </ul>
