--- a/templates/kde.html
+++ b/templates/kde.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <title>KDE Plotter</title>
-    {% include 'include/header.html' %}
+    {% include 'global/header.html' %}
 </head>
 <body>
-    {% include 'include/nav.html' %}
+    {% include 'global/nav.html' %}
     <div class="container mt-5">
         <div class="row">
         <h1 class="text-left mb-4">KDE Plotter</h1>
