Abstracted code in a big way

--- a/templates/dz_nmf/dz_nmf.html
+++ b/templates/dz_nmf/dz_nmf.html
@@ -8,8 +8,8 @@
         {% include 'global/nav.html' %}
         <div class="container mt-5">
             <h1 class="text-left mb-4">DZnmf</h1>
-            {% include 'dz_nmf/controls.html' %}
-            {% include 'dz_nmf/results.html' %}
+            {% include 'dz_nmf/include/controls.html' %}
+            {% include 'dz_nmf/include/results.html' %}
         </div>
         <script src="{{ url_for('static',filename='scripts/navbar.js') }}"></script>
         <!-- <script src="{{ url_for('static',filename='scripts/stacked_switch.js') }}"></script> /-->
