--- a/templates/dz_stats/dz_stats.html
+++ b/templates/dz_stats/dz_stats.html
@@ -8,8 +8,8 @@
         {% include 'global/nav.html' %}
         <div class="container mt-5">
             <h1 class="text-left mb-4">DZstats</h1>
-            {% include 'dz_stats/controls.html' %}
-            {% include 'dz_stats/results.html' %}
+            {% include 'dz_stats/include/controls.html' %}
+            {% include 'dz_stats/include/results.html' %}
         </div>
         <script src="{{ url_for('static',filename='scripts/navbar.js') }}"></script>
         <script src="{{ url_for('static',filename='scripts/stacked_switch.js') }}"></script>
