--- a/templates/global/nav.html
+++ b/templates/global/nav.html
@@ -5,18 +5,12 @@
 
         <a id="dztools-link" href="{{ url_for('main') }}" class="nav-link mt-1 navbar-icon" title="Home">
             <img src="{{ url_for('static', filename='/DZ.ico') }}" alt="DZ.ico">
-            DZtools
+            Home
         </a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a id="dztools-link" href="{{ url_for('main') }}" class="nav-link usually-hidden" title="Home">DZtools</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/pdp/" title="Plot a PDP">PDP Plotter</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/kde/" title="Plot a KDE">KDE Plotter</a>
+                    <a id="dztools-link" href="{{ url_for('main') }}" class="nav-link usually-hidden" title="Home">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/dz_stats/" title="Intersample Comparison of DZ Ages">DZstats</a>
