--- a/templates/global/nav.html
+++ b/templates/global/nav.html
@@ -16,6 +16,9 @@
                     <a class="nav-link" href="/dz_stats/" title="Intersample Comparison of DZ Ages">DZstats</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/dz_mix/" title="Non-Negative Matrix Factorization">DZmix</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/dz_nmf/" title="Non-Negative Matrix Factorization">DZnmf</a>
                 </li>
                 <li class="nav-item">
