Added 2 download routes (PDP, MDS) and added a function to generate a mixed sample in documents.py. This will be useful in future functions that deal with unmixing sources to accurately determine provenance

--- a/templates/dz_stats/include/results.html
+++ b/templates/dz_stats/include/results.html
@@ -30,10 +30,10 @@
                     Download PDP
                 </button>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/download_kde?format=png">PNG</a></li>
-                    <li><a class="dropdown-item" href="/download_kde?format=svg">SVG</a></li>
-                    <li><a class="dropdown-item" href="/download_kde?format=pdf">PDF</a></li>
-                    <li><a class="dropdown-item" href="/download_kde?format=eps">EPS</a></li>
+                    <li><a class="dropdown-item" href="/download_pdp?format=png">PNG</a></li>
+                    <li><a class="dropdown-item" href="/download_pdp?format=svg">SVG</a></li>
+                    <li><a class="dropdown-item" href="/download_pdp?format=pdf">PDF</a></li>
+                    <li><a class="dropdown-item" href="/download_pdp?format=eps">EPS</a></li>
                 </ul>
             </div>
         </div>
@@ -72,10 +72,10 @@
                     Download MDS
                 </button>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/download_kde?format=png">PNG</a></li>
-                    <li><a class="dropdown-item" href="/download_kde?format=svg">SVG</a></li>
-                    <li><a class="dropdown-item" href="/download_kde?format=pdf">PDF</a></li>
-                    <li><a class="dropdown-item" href="/download_kde?format=eps">EPS</a></li>
+                    <li><a class="dropdown-item" href="/download_mds?format=png">PNG</a></li>
+                    <li><a class="dropdown-item" href="/download_mds?format=svg">SVG</a></li>
+                    <li><a class="dropdown-item" href="/download_mds?format=pdf">PDF</a></li>
+                    <li><a class="dropdown-item" href="/download_mds?format=eps">EPS</a></li>
                 </ul>
             </div>
         </div>
