Implemented basic dzMix functionality and set new goals

--- a/templates/global/nav.html
+++ b/templates/global/nav.html
@@ -16,13 +16,10 @@
                     <a class="nav-link" href="/dz_stats/" title="Intersample Comparison of DZ Ages">DZstats</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/dz_mix/" title="Non-Negative Matrix Factorization">DZmix</a>
+                    <a class="nav-link" href="/project_editor/" title="Run a Script">Project Editor</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/dz_nmf/" title="Non-Negative Matrix Factorization">DZnmf</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/cmd/" title="Run a Command">DZcmd</a>
+                    <a class="nav-link" href="/mix/" title="unmix sample">DZ mix</a>
                 </li>
             </ul>
         </div>
