--- a/templates/global/nav.html
+++ b/templates/global/nav.html
@@ -21,6 +21,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/mix/" title="unmix sample">DZ mix</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/new/" title="new_interface">New Interface</a>
+                </li>
             </ul>
         </div>
     </nav>
