--- a/templates/dz_stats/include/controls.html
+++ b/templates/dz_stats/include/controls.html
@@ -49,9 +49,10 @@
                     <label><input type="checkbox" name="cross_correlation_matrix" value="true" {% if cross_correlation_matrix %}checked{% endif %}> Cross-Correlation Matrix</label>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary">Plot</button>
+            <button id="load_button" type="submit" class="btn btn-primary">Plot</button>
         </form>
     {% endif %}
 </div>
 <br />
 <br />
+
