--- a/templates/global/nav.html
+++ b/templates/global/nav.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="/mix/" title="unmix sample">DZ mix</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/new/" title="new_interface">New Interface</a>
+                    <a class="nav-link" href="/data_editor/" title="Edit Data Spreadsheet">Data Editor</a>
                 </li>
             </ul>
         </div>
