--- a/templates/dz_stats/dz_stats.html
+++ b/templates/dz_stats/dz_stats.html
@@ -11,6 +11,12 @@
             {% include 'dz_stats/include/controls.html' %}
             {% include 'dz_stats/include/results.html' %}
         </div>
+
+        <div id="loading-bar">
+            <div class="spinner"></div>
+        </div>
+
+        <script src="{{ url_for('static', filename='scripts/spinner.js') }}"></script>
         <script src="{{ url_for('static',filename='scripts/navbar.js') }}"></script>
         <script src="{{ url_for('static',filename='scripts/stacked_switch.js') }}"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
