Started new data-editing interface to replace all other "sub-apps"

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,10 +32,10 @@
         </p>
         <p>
             To use our tools for detrital zircon, please make sure to use data that looks like this:
-            <img src="{{ url_for('static', filename='/test_data.jpg') }}" alt="DZ.ico">
+            <img src="{{ url_for('static', filename='/global/test_data.jpg') }}" alt="DZ.ico">
         </p>
     </div>
-    <script src="../static/scripts/navbar.js"></script>
+    <script src="../static/global/scripts/navbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     {% include 'global/footer.html' %}
 </body>
