--- a/templates/dz_stats/dz_stats.html
+++ b/templates/dz_stats/dz_stats.html
@@ -16,9 +16,9 @@
             <div class="spinner"></div>
         </div>
 
-        <script src="{{ url_for('static', filename='scripts/spinner.js') }}"></script>
-        <script src="{{ url_for('static',filename='scripts/navbar.js') }}"></script>
-        <script src="{{ url_for('static',filename='scripts/stacked_switch.js') }}"></script>
+        <script src="{{ url_for('static', filename='global/scripts/spinner.js') }}"></script>
+        <script src="{{ url_for('static',filename='global/scripts/navbar.js') }}"></script>
+        <script src="{{ url_for('static',filename='global/scripts/stacked_switch.js') }}"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
