--- a/templates/global/header.html
+++ b/templates/global/header.html
@@ -1,6 +1,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='/DZ.ico') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='global/DZ.ico') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/default.css') }}">
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='global/styles/default.css') }}">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
