--- a/templates/global/nav.html
+++ b/templates/global/nav.html
@@ -1,10 +1,10 @@
 <nav id="nbar" class="navbar navbar-expand-lg navbar-light" style="width:115%;">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <img src="{{ url_for('static', filename='/menu.ico') }}" alt="Menu" class="navbar-toggler-icon">
+            <img src="{{ url_for('static', filename='global/menu.ico') }}" alt="Menu" class="navbar-toggler-icon">
         </button>
 
         <a id="dztools-link" href="{{ url_for('main') }}" class="nav-link mt-1 navbar-icon" title="Home">
-            <img src="{{ url_for('static', filename='/DZ.ico') }}" alt="DZ.ico">
+            <img src="{{ url_for('static', filename='global/DZ.ico') }}" alt="DZ.ico">
             Home
         </a>
         <div class="collapse navbar-collapse" id="navbarNav">
