--- a/templates/spreadsheet_editor/spreadsheet_editor.html
+++ b/templates/spreadsheet_editor/spreadsheet_editor.html
@@ -15,7 +15,7 @@
     </div>
 
 <input type="hidden" id="spreadsheetData" value='{{ spreadsheet_data | tojson }}' />
-    <script src="{{ url_for('static',filename='scripts/data_table.js') }}"></script>
+    <script src="{{ url_for('static',filename='global/scripts/data_table.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.3/xlsx.full.min.js"></script>
 
