--- a/templates/data_editor/data_editor.html
+++ b/templates/data_editor/data_editor.html
@@ -3,34 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flask App with Toolbar and Data Table</title>
+    <title>dzToolBox</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/handsontable/dist/handsontable.full.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='new_interface/styles/toolbar.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='new_interface/styles/split_pane.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='new_interface/styles/page.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='data_editor/styles/toolbar.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='data_editor/styles/split_pane.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='data_editor/styles/page.css') }}">
     <script src="https://cdn.rawgit.com/lingtalfi/simpledrag/master/simpledrag.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/handsontable@latest/dist/handsontable.full.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/handsontable@latest/dist/handsontable.full.min.css" rel="stylesheet" />
 
 </head>
 <body>
-    {% include "new_interface/include/info_bar.html" %}
-    {% include "new_interface/include/toolbar.html" %}
+    {% include "data_editor/include/info_bar.html" %}
+    {% include "data_editor/include/toolbar.html" %}
 
     <div class="panes-container">
         <div class="left-pane" id="left-pane">
-            {% include "new_interface/include/table.html" %}
+            {% include "data_editor/include/table.html" %}
         </div>
         <div class="panes-separator" id="panes-separator"></div>
         <div class="right-pane" id="right-pane">
-            {% include "new_interface/include/outputs.html" %}
+            {% include "data_editor/include/outputs.html" %}
         </div>
     </div>
-    <script src="{{ url_for('static', filename='new_interface/scripts/data_table.js') }}"></script>
-    <script src="{{ url_for('static', filename='new_interface/scripts/split_pane.js') }}"></script>
+
+    {% include "data_editor/include/documentation.html" %}
+    <script src="{{ url_for('static', filename='data_editor/scripts/data_table.js') }}"></script>
+    <script src="{{ url_for('static', filename='data_editor/scripts/split_pane.js') }}"></script>
+    <script src="{{ url_for('static', filename='data_editor/scripts/documentation.js') }}"></script>
+    <script src="{{ url_for('static', filename='data_editor/scripts/winbox.bundle.js') }}"></script>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.3/xlsx.full.min.js"></script>
+
 </body>
 </html>
